css/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');

@font-face {
  font-family: 'icomoon';
  src:  url('fonts/icomoon.eot?m6k56l');
  src:  url('fonts/icomoon.eot?m6k56l#iefix') format('embedded-opentype'),
    url('fonts/icomoon.ttf?m6k56l') format('truetype'),
    url('fonts/icomoon.woff?m6k56l') format('woff'),
    url('fonts/icomoon.svg?m6k56l#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.icon-moneybag.big {
    font-size:48px;
    text-align:center;
    color:#FFF;
}
.icon-moneybag:before {
  content: "\e900";
}
.icon-credit-card:before {
  content: "\e93f";
}

*{
  transition: 1s;
}

body{
  font-family: 'Lato', sans-serif;  
  background-color: #26272b;
  overflow-x: hidden;
  padding:10px;
}
a {
    color:#FFF;
    text-decoration:underline;
    font-weight:strong;
}
a:hover {
    text-decoration:underline;
    cursor:pointer;
}
.container{
  width: 100vw;
  max-width: 1100px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
}

#points{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.top-banner{
    padding: 0px 0 25px 0;
    box-sizing: border-box;
    .title{
        font-weight: 700;
        color: #f9f8f4;
        text-align: center;
        letter-spacing: 0.08em;
        margin: 0;
    }
    .desc{
        margin: 8px 0;
        font-weight: 400;
        color: #f9f8f4;
        opacity: 0.8;
        font-size: 14px;
        text-align: center;
        letter-spacing: 0.08em;
    }
    a {
         text-decoration:none;
    }
}
    .arrow_box {
     position: relative;
     background: #26272b;
    }
    .arrow_box:after {
     top: 100%;
     left: 50%;
     border: solid transparent;
     content: " ";
     height: 0;
     width: 0;
     position: absolute;
     pointer-events: none;
     border-color: rgba(38, 39, 43, 0);
     border-top-color: #26272b;
     border-width: 15px;
     margin-left: -15px;
    }

.points-content{
  background-color: #303135;
  width: 100%;
  color: #fff;
  ul{
    list-style: none;
    display:flex;
    flex-direction: row;
    padding: 20px 30px;
    flex-wrap: wrap;
    box-sizing: border-box;
    justify-content: center;
    li{
      display: inline-block;
      margin: 10px;
      padding: 17px 20px;
      box-sizing: border-box;
      transition: 0.3s background-color, 0.3s box-shadow;
      border-radius: 5px;
      .icon{
        width: 55px;
        height: 55px;
        display: inline-block;
        vertical-align: top;
        font-size:55px;
        color:#777;
        text-shadow:-3px 1px #222;
      }
      .divider{
        height: 100%;
        width: 2px;
        background-color: #fff;
        opacity: 0.4;
        margin: 0 7px;
        display: inline-block;
      }
      
      .content{
        width: 250px;
        display: inline-block;
        vertical-align: top;
      }
      
      .point-title{
        font-weight: 700;
        font-size: 16px;
        margin: 0 0 8px 0;
        word-wrap: break-word;
        line-height: 1em;
      }
      
      .point-desc{
        margin: 0;
        font-weight: 400;
        font-size: 14px;
        opacity: 0.8;
      }
    }
  }
}

// ----------------------
// demo styling
// ----------------------
#nextSlide {
  text-decoration: none;
  color:#FFF;
  display: block;
  margin: 0 auto;
  font-size:120px;
  width:120px;
  &:hover {
      transition: 1.0s box-shadow;
      text-shadow: 4px 4px #000;
  }
}

p {
  color:#FFF;
  font-weight: bold;
}

// ----------------------
// text slider
// ----------------------

#textSlider {
  width:780px;
  max-width:100%;
  margin:10px auto 0;
  height:100px;
  position: relative;
  overflow: hidden;

  // slide item
  .slide {
    display: flex;
    flex-direction: column;
    height:100%;
    min-width:100%;
    position: absolute;

    &.active p {
      transform: translateX(0%);
    }
    
    &.out p {
      transform: translateX(-100%);
    }

    // slide text paragraph
    p {
      display:flex;
      align-items: center;
      margin: 0;
      padding: 0 0 0 2em;
      transform-origin:0 0;
      transform: translateX(100%);
      transition:.3s; 
      &:nth-of-type(5n+1) { transition: 1s; }
      &:nth-of-type(5n+2) { transition: .5s; }
      &:nth-of-type(5n+3) { transition: 1.5s; }
      &:nth-of-type(5n+4) { transition: .75s; }
      &:nth-of-type(5n+5) { transition: 1.25s; }
    }
  }
}

